--- a/index.html
+++ b/index.html
@@ -5,24 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clicker</title>
-    <script>code.js</script>
+    <script src="code.js"></script>
     <link rel="stylesheet" href="main.css">
 </head>
 <body class="body">
     <h1 id="hClass">Wow! Much Click!</h1>
     <game class="centerGame">
-        <p>damn boy look at all this suff that i have over here on the side of the page, soo mush stuff over here</p>
-        <img src="C:\Users\prest\Documents\WISC\MP1-WebGame\assets\yummyToast.png" alt="Nothing to see here just some yummy French Toast, I guess you don't get any. Too bad." id="toastImg">
-        <p>damn boy look at all this suff that i have over here on the side of the page, soo mush stuff over here</p>
+        <p>Clicks: <a id="clicks">0</a></p>
+        <p>Multiplier: <a id="multiplier">1</a></p>
+        <p>Extra Clicks: <a id="plusAdderOne">0</a></p>
+        <p>Multi-Plus: <a id="multiPlus">0</a></p>
+        <img onClick="onClick()" src="C:\Users\prest\Documents\WISC\MP1-WebGame\assets\yummyToast.png" alt="Nothing to see here just some yummy French Toast, I guess you don't get any. Too bad." id="toastImg">
     </game>
     <br>
     <h2 id="hClass">Shop</h2>
     <shop class="centerShop">
         <ul></ul>
-            <li>damn boy look at all this suff that i have over here on the side of the page, soo mush stuff over here</li>
-            <li>damn boy look at all this suff that i have over here on the side of the page, soo mush stuff over here</li>
-            <li>damn boy look at all this suff that i have over here on the side of the page, soo mush stuff over here</li>
-            <li>damn boy look at all this suff that i have over here on the side of the page, soo mush stuff over here</li>
+            <button type="button" onClick="lowShop()">Adds x1 to your click multiplier cost = <a id="lowShopCost">101</a> clicks</button>
+            <button type="button" onClick="plusShopOne()">Adds +5 clicks after multiplier cost = <a id="plusShopOneCost">525</a> clicks</button>
+            <button type="button" onClick="multiPlusFunc()">Adds +1 click before multiplier cost = <a id="multiPlusCost">3000</a> clicks</button>
             <li>damn boy look at all this suff that i have over here on the side of the page, soo mush stuff over here</li>
             <li>damn boy look at all this suff that i have over here on the side of the page, soo mush stuff over here</li>
         </ul>
