last shop and end game button added

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <button type="button" onClick="lowShop()">Adds x1 to your click multiplier cost = <a id="lowShopCost">101</a> clicks</button>
             <button type="button" onClick="plusShopOne()">Adds +5 clicks after multiplier cost = <a id="plusShopOneCost">525</a> clicks</button>
             <button type="button" onClick="multiPlusFunc()">Adds +1 click before multiplier cost = <a id="multiPlusCost">3000</a> clicks</button>
-            <li>damn boy look at all this suff that i have over here on the side of the page, soo mush stuff over here</li>
-            <li>damn boy look at all this suff that i have over here on the side of the page, soo mush stuff over here</li>
+            <button type="button" onClick="plusShopTwo()">Adds +50 clicks after multiplier cost = <a id="plusShopTwoCost">10000</a> clicks</button>
+            <button type="button" onClick="winGame()">Win the Game! = 100,000 clicks</button>
         </ul>
     </shop>
 </body>
