clean up with additional notation, *fix total adder values

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <game class="centerGame">
         <p>Clicks: <a id="clicks">0</a></p>
         <p>Multiplier: <a id="multiplier">1</a></p>
-        <p>Extra Clicks: <a id="plusAdderOne">0</a></p>
+        <p>Extra Clicks: <a id="plusAdderTot">0</a></p>
         <p>Multi-Plus: <a id="multiPlus">0</a></p>
-        <p>CPC: </p>
         <img onClick="onClick()" src="C:\Users\prest\Documents\WISC\MP1-WebGame\assets\yummyToast.png" alt="Nothing to see here just some yummy French Toast, I guess you don't get any. Too bad." id="toastImg">
     </game>
     <br>
