start of end game timer function, needs settimeout and cleartimeout

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         <p>Extra Clicks: <a id="plusAdderTotal">0</a></p>
         <p>Multi-Plus: <a id="multiPlus">0</a></p>
         <img onClick="onClick()" src="C:\Users\prest\Documents\WISC\MP1-WebGame\assets\yummyToast.png" alt="Nothing to see here just some yummy French Toast, I guess you don't get any. Too bad." id="toastImg">
+        <p id="endCounter"></p>
+        <br>
+        <p id="seconds">0</p>
+        <p id="minutes">0</p>
+        <p id="hours">0</p>
     </game>
     <br>
     <h2 id="hClass">Shop</h2>
